# repro-1012c50820aa

./: .gitignore  Cargo.toml  Package.ps1
packaging/: AppxManifest.xml
src/: main.rs
