[package]
name = "app"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.windows]
version = "0.48.0"
features = [
    "implement",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_System_Console"
]
